--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<h1>These are your tweets, <%= @user.username %></h1>
+<h1>These are your tweets, <%= current_user.username %></h1>
 <% @user.tweets.each do |tweet| %>
     <%= tweet.content %>
 <% end %>
