--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Fwitter</title>
+    <title>Welcome to Fwitter</title>
   </head>
   <body>
 
@@ -10,6 +10,7 @@
       <h2>This is located in layout.erb!</h2>
       <h2>Don't forget to <strong>yield</strong> your views!</h2>
     </div>
-
+ 
+      <%=yield%>
   </body>
 </html>
