--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,16 +1,29 @@
-<% if Helpers.is_logged_in?(session) %>
-<%= @error %>
-  <form action='/tweets' method="post">
-    Content:
-    <input type="text" name="content"><br>
-    Create Your Tweet:
+<% if is_logged_in? %>
+<% @error %>
 
-    <input type="submit" name="submit" id="submit">
-
-    <input type="submit" name="submit">
-
-  </form>
-
-  <% else %>
-      <h1> You Must Be Logged in to Make Tweets </h1>
+<div class="col-md-4">
+  <% if flash[:message] %>
+  <div class="alert alert-danger">
+    <%=flash[:message]%>
+  </div>
   <% end %>
+  <div class="card">
+    <div class="card-header">
+        <h1 class="card-title">New Tweet</h1>
+    </div>
+    <div class="card-body">
+    <form action="/tweets" method="POST">
+      <div class="form-group">
+        <textarea class="form-control form-control-lg" id="content" name="content" rows="4" cols="50" placeholder="Enter content here"></textarea>
+      </div>
+      <div class="form-group">
+        <input class="btn btn-primary" type="submit" id="submit" value="Tweet">
+      </div>
+    </form>
+
+      <% else %>
+          <h1> You Must Be Logged in to Make Tweets </h1>
+      <% end %>
+    </div>
+  </div>
+</div>
