--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,16 +1,13 @@
-<% if Helpers.is_logged_in?(session) %>
-<%= @error %>
+<% if current_user %>
   <form action='/tweets' method="post">
     Content:
     <input type="text" name="content"><br>
     Create Your Tweet:
-
-    <input type="submit" name="submit" id="submit">
-
-    <input type="submit" name="submit">
+    <button type="submit" name="submit">submit</button>
 
   </form>
 
-  <% else %>
-      <h1> You Must Be Logged in to Make Tweets </h1>
-  <% end %>
+<% else %>
+    <h1> You Must Be Logged in to Make Tweets </h1>
+<% end %>
+
